@@ -20,7 +20,6 @@
 <div id="main_title">Welcome To Crunchy</div>
 </div>
 
-
 <div id="crunchy_sidebar">
 <div class="boxcap captop"></div>
     <ul class="categories">
@@ -101,6 +100,11 @@
 <h2>Hello <span title="username">user</span>!
 Welcome to version
 <b><span title="version">automatically inserted from version.py</span></b> of Crunchy!</h2>
+<p>This is mostly a bug fix release.  However, a new plugin has been included
+since version 1.0:
+<a href="/docs/experimental/getsource.html">the getsource plugin</a>.  And
+it works with <a href="/docs/tests/rst_getsource.txt">rst files too.</a>
+</p>
 
 <h3>What is needed to run Crunchy?</h3>
 <p>Since you are reading this, chances are that you are already using Crunchy.
